--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.9 <4.0.0'
+  sdk: '>=3.3.4 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,7 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.6  
   google_fonts: ^6.2.1 
   shared_preferences: ^2.2.3 
-  flutter_swipe_action_cell: ^3.1.3
+  flutter_swipe_action_cell: ^3.1.3 
+  dartz: ^0.10.1 
+  flutter_bloc: ^8.1.5
+ 
 
  
 
